--- a/asm_pandaboo/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/asm_pandaboo/src/main/resources/templates/fragments/admin/sidebar.html
@@ -26,6 +26,7 @@
 					<li><a href="/productsDetail">Quản lý sản phẩm</a></li>
 					<li><a href="/products">Danh sách sản phẩm</a></li>
 					<li><a href="/add-promotion">Quản lý khuyến mãi</a></li>
+					<li><a href="/staff_detail">Quản lý nhân viên</a></li>
 					<li><a href="/promotion">Danh sách khuyến mãi</a></li>
 				</ul>
 			</li>
