Sangnvpc06179 đã chỉnh sửa AccountBean, AccountEntity, ClientEntity thành AddressEntity, AdminController, ClientController,nav.html,PayDetailJPA,PayDetailService, PaymentEntity, ProductService,register.html,ShoppingCartEntity, sidebar.html. Đã thêm staff.html,staff_detail.html

--- a/asm_pandaboo/src/main/resources/templates/admin/register.html
+++ b/asm_pandaboo/src/main/resources/templates/admin/register.html
@@ -63,47 +63,53 @@
 							<div class="col-md-12 form-group">
 								<input type="text" class="form-control" id="username"
 									name="username" placeholder="Tên đăng nhập"
-									>
-<!--								<p class="text-danger"-->
-<!--									th:if="${error?.getFieldError('username') != null}"-->
-<!--									th:text="${error?.getFieldError('username')?.getDefaultMessage()}"></p>-->
+									   th:value="${acc?.username}" >
+								<p class="text-danger"
+									th:if="${error?.getFieldError('username') != null}"
+									th:text="${error?.getFieldError('username')?.getDefaultMessage()}"></p>
 							</div>
 							<div class="col-md-12 form-group">
 								<input type="password" class="form-control" id="password"
 									name="password" placeholder="Mật khẩu"
-									>
-<!--								<p class="text-danger"-->
-<!--									th:if="${error?.getFieldError('password') != null}"-->
-<!--									th:text="${error?.getFieldError('password')?.getDefaultMessage()}"></p>-->
+									   th:value="${acc?.password}">
+								<p class="text-danger"
+									th:if="${error?.getFieldError('password') != null}"
+									th:text="${error?.getFieldError('password')?.getDefaultMessage()}"></p>
 							</div>
 							<div class="col-md-12 form-group">
 								<input type="text" class="form-control" id="fullname"
 									name="fullname" placeholder="Họ và tên"
-									>
-<!--								<p class="text-danger"-->
-<!--									th:if="${error?.getFieldError('fullname') != null}"-->
-<!--									th:text="${error?.getFieldError('fullname')?.getDefaultMessage()}"></p>-->
+									   th:value="${acc?.fullname}">
+								<p class="text-danger"
+									th:if="${error?.getFieldError('fullname') != null}"
+									th:text="${error?.getFieldError('fullname')?.getDefaultMessage()}"></p>
 							</div>
 							<div class="col-md-12 form-group">
 								<input type="text" class="form-control" id="phone"
 									   name="phone" placeholder="Số điện thoại"
-									   >
+									   th:value="${acc?.phone}">
+								<p class="text-danger"
+								   th:if="${error?.getFieldError('phone') != null}"
+								   th:text="${error?.getFieldError('phone')?.getDefaultMessage()}"></p>
 							</div>
 							<div class="col-md-12 form-group">
 								<input type="text" class="form-control" id="email"
 									   name="email" placeholder="Địa chỉ email"
-									 >
+									   th:value="${acc?.email}">
+								<p class="text-danger"
+								   th:if="${error?.getFieldError('email') != null}"
+								   th:text="${error?.getFieldError('email')?.getDefaultMessage()}"></p>
 								</div>
 							<div class="col-md-12 form-group">
 								<input type="file" class="form-control" id="avatar"
 									name="avatar">
-<!--								<p th:text="${NotImage}" class="text-danger">-->
+								<p th:text="${NotImage}" class="text-danger">
 							</div>
 							<div class="col-md-12 form-group">
 								<input type="password" class="form-control"
 									id="confirm_password" name="confirm_password"
 									placeholder="Nhập lại mật khẩu">
-<!--								<p th:text="${confirm}" class="text-danger">-->
+								<p th:text="${confirm}" class="text-danger">
 							</div>
 							<div class="col-md-12 form-group">
 								<button type="submit" value="submit" class="primary-btn">Đăng
