--- a/asm_pandaboo/src/main/resources/templates/client/single-product.html
+++ b/asm_pandaboo/src/main/resources/templates/client/single-product.html
@@ -38,8 +38,8 @@
 						<div class="s_product_text">
 							<h3 th:text="${product?.prod_name}">Túi tự đan có dây đeo chéo phối nơ xinh</h3>
 							<h2 th:text="${#numbers.formatCurrency(product?.red_price)}" class="d-inline mr-2">190.000đ</h2>
-							<h4 th:text="${#numbers.formatCurrency(product?.price)}" class="d-inline text-muted"
-								style="text-decoration: line-through;">240.000đ</h4>
+<!--							<h4 th:text="${#numbers.formatCurrency(product?.price)}" class="d-inline text-muted"-->
+<!--								style="text-decoration: line-through;">240.000đ</h4>-->
 							<ul class="list mt-3">
 								<li><a class="active" href="#"><span>Đã bán</span> :
 									 <span th:text="${sold}">1.5M</span></a></li>
@@ -58,8 +58,8 @@
 								</a> 
 							</div>
 							<div class="card_area d-flex align-items-center">
-							<input name="clientId" type="hidden" th:value="${session.cliByAcc?.getCli_id()}">
-								<a  class="primary-btn" th:href="@{'/add-to-cart-with-quantity?id=' + ${product?.prod_id} + '&quantity=' + ${quantity} + '&clientId=' + ${session.cliByAcc?.getCli_id()} + '&path=' + ${path}}">Thêm vào giỏ</a>
+							<input name="clientId" type="hidden" th:value="${session.cliByAcc?.getAcc_id()}">
+								<a  class="primary-btn" th:href="@{'/add-to-cart-with-quantity?id=' + ${product?.prod_id} + '&quantity=' + ${quantity} + '&clientId=' + ${session.cliByAcc?.getAcc_id()} + '&path=' + ${path}}">Thêm vào giỏ</a>
 								<!-- <a class="icon_btn" href="#"><i class="lnr lnr lnr- diamond"></i></a>
 							<a class="icon_btn" href="#"><i class="lnr lnr lnr- heart"></i></a>  -->
 							</div>
