--- a/asm_pandaboo/src/main/resources/templates/seller/products.html
+++ b/asm_pandaboo/src/main/resources/templates/seller/products.html
@@ -73,7 +73,7 @@
 										<div class="row gap-3 justify-content-center">
 											<div class="col-auto">
 												<form method="POST">
-													<a name="" id="" class="btn btn-success text-white" role="button"
+													<a class="btn btn-success text-white" role="button"
 														th:href="'/update-product?id='+${item?.prod_id}"><i class="fa-solid fa-pen-to-square"></i></a>
 												</form>
 											</div>
