--- a/asm_pandaboo/src/main/resources/templates/client/myPayments.html
+++ b/asm_pandaboo/src/main/resources/templates/client/myPayments.html
@@ -36,12 +36,12 @@
 								</div>
 							</div>
 						</div>
-						<table class="table table-striped table-hover text-center">
+						<table class="table table-striped table-hover">
 							<thead>
 								<tr>
-									<th scope="row">Khách hàng</th>
-									<th scope="row">Ngày mua</th>
-									<th scope="row">Số lượng sản phẩm</th>
+									<th scope="row">Sản phẩm</th>
+									<th scope="row">Giá</th>
+									<th scope="row">Tổng số lượng sản phẩm</th>
 									<th scope="row">Tổng tiền</th>
 									<th scope="row">Phương thức thanh toán</th>
 									<th scope="row">Chi tiết</th>
@@ -51,9 +51,14 @@
 							</thead>
 							<tbody>
 								<tr scope="row" th:each="item : ${payments}">
-									<td
-										th:text="${item?.accountPaymentsEntity?.fullname}"></td>
-									<td th:text="${#dates.format(item?.payDate, 'dd/MM/yyyy')}"></td>
+									<td>
+										<img alt=""
+											 th:src="@{'/images/' + ${item?.paymentdetailPaymentEntity?.get(0)?.getProd_images()}}"
+											 width="20%">
+										<p th:text="${item?.paymentdetailPaymentEntity?.get(0)?.getProd_name()}" ></p>
+									</td>
+
+									<td th:text="${#numbers.formatCurrency(item?.paymentdetailPaymentEntity?.get(0)?.getRed_price())}"></td>
 									<td th:text="${item?.totalQuantity}"></td>
 									<td th:text="${#numbers.formatCurrency(item?.orderTotal)}"></td>
 									<td th:text="${item?.payMethod}">200</td>
