--- a/asm_pandaboo/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/asm_pandaboo/src/main/resources/templates/fragments/admin/sidebar.html
@@ -17,7 +17,15 @@
 					<span class="lnr lnr-home"></span>Trang chủ
 				</a>
 			</li>
-
+			<li class="">
+				<a href="#homeSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+					<span class="lnr lnr-gift"></span>Nhân viên
+				</a>
+				<ul class="collapse list-unstyled menu" id="homeSubmenu1">
+					<li><a href="/staff_detail">Quản lý nhân viên</a></li>
+					<li><a href="/staff">Danh sách nhân viên</a></li>
+				</ul>
+			</li>
 			<li class="dropdown ">
 				<a href="#homeSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
 					<span class="lnr lnr-gift"></span>Sản phẩm
@@ -26,7 +34,6 @@
 					<li><a href="/productsDetail">Quản lý sản phẩm</a></li>
 					<li><a href="/products">Danh sách sản phẩm</a></li>
 					<li><a href="/add-promotion">Quản lý khuyến mãi</a></li>
-					<li><a href="/staff_detail">Quản lý nhân viên</a></li>
 					<li><a href="/promotion">Danh sách khuyến mãi</a></li>
 				</ul>
 			</li>
