--- a/asm_pandaboo/src/main/resources/templates/seller/products.html
+++ b/asm_pandaboo/src/main/resources/templates/seller/products.html
@@ -116,14 +116,14 @@
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
-								<h5 class="modal-title">Xóa sản phẩm</h5>
+								<h5 class="modal-title">Xóa tài khoản</h5>
 								<button type="button" class="close" data-dismiss="modal"
 									aria-label="Close">
 									<span aria-hidden="true">&times;</span>
 								</button>
 							</div>
 							<div class="modal-body">
-								<h6>Bạn chắc chắn xóa sản phẩm này?</h6>
+								<h6>Bạn chắc chắn xóa tài khoản này?</h6>
 							</div>
 							<div class="modal-footer">
 								<button type="button" class="btn btn-secondary"
